# Annoti

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  QUICK_REFERENCE.md  README.md  REFACTOR_V1.md  USER_GUIDE.md  V1_ACCEPTANCE_TEST.md  V1_IMPLEMENTATION.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.ts
annoti/: pubspec.yaml
annoti/linux/: CMakeLists.txt
annoti/windows/: CMakeLists.txt
doc/: core.md  log-20260113.md  project.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: webview_controller.dart
lib/models/: annotation.dart
lib/pages/: editor_page.dart
lib/services/: annotation_service.dart  file_service.dart  html_service.dart
lib/utils/: date_formatter.dart
lib/widgets/: annotation_list.dart  annotation_sticky_note.dart  webview_markdown_viewer.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  typography.yaml
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: AnnotationList.vue  CreateAnnotationDialog.vue  DocumentViewer.vue  ExportDialog.vue  ExportSuccessToast.vue  ImportExportDialog.vue  MainLayout.vue  SettingsDialog.vue  StickyNote.vue  StickyNoteOverlay.vue  TextViewer.vue  TopBar.vue  TypographySettings.vue
src/composables/: useAnnotations.ts  useDocument.ts  useSettings.ts  useSidebar.ts  useTheme.ts  useTypography.ts  useTypographySettings.ts  (+1 more)
test/: widget_test.dart
web/: index.html  manifest.json
(+33 files in other folders)
